# prost-reflect

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  README.tpl  cobertura.xml  generate-readme.ps1  release-plz.toml  rust-toolchain.toml
.github/: codecov.yml  dependabot.yml
.github/workflows/: ci.yml  release.yml
prost-reflect/: Cargo.toml  build.rs
prost-reflect-build/: Cargo.toml
prost-reflect-build/src/: lib.rs  test.proto
prost-reflect-conformance-tests/: Cargo.toml  build.rs  text_format_failure_list.txt
prost-reflect-conformance-tests/src/: lib.rs  main.rs
prost-reflect-conformance-tests/tests/: conformance.rs
prost-reflect-derive/: Cargo.toml
prost-reflect-derive/src/: lib.rs
prost-reflect-derive/tests/: attr_unknown_field.rs  attr_unknown_field.stderr  basic.rs  duplicate_attr.rs  duplicate_attr.stderr  enum.rs  enum.stderr  file_descriptor_set.rs  ignore_enum.rs  missing_attr.rs  missing_attr.stderr  missing_name.rs  missing_name.stderr  multiple_attr.rs  package_name.rs  tests.rs
prost-reflect-tests/: Cargo.toml  build.rs  out.textproto
prost-reflect-tests/benches/: decode.rs
prost-reflect-tests/proptest-regressions/: json.txt  lib.txt  text_format.txt
prost-reflect-tests/src/: arbitrary.rs  decode.rs  desc.rs  desc2.proto  ext.proto  import_any.proto  imports.proto  json.rs  lib.rs  options.proto  test.proto  test2.proto  text_format.rs
prost-reflect/doc/: decoding.md  intro.md  json.md  reflect.md
prost-reflect/proptest-regressions/dynamic/serde/: case.txt
prost-reflect/src/: doctest.proto  lib.rs  reflect.rs
prost-reflect/src/descriptor/: api.rs  cache.rs  error.rs  global.rs  mod.rs  service.rs  tag.rs  tests.rs  types.rs
prost-reflect/src/descriptor/ty/: build.rs  map.rs  mod.rs  tests.rs
prost-reflect/src/dynamic/: extension.rs  field.rs  fields.rs  fmt.rs  message.rs  mod.rs  unknown.rs
prost-reflect/src/dynamic/serde/: case.rs  de.rs  mod.rs  ser.rs
prost-reflect/src/dynamic/serde/de/: kind.rs  mod.rs  wkt.rs
prost-reflect/src/dynamic/serde/ser/: mod.rs  wkt.rs
prost-reflect/src/dynamic/text_format/: format.rs  mod.rs
prost-reflect/src/dynamic/text_format/parse/: error.rs  lex.rs  mod.rs
prost-reflect/src/reflect/: mod.rs  wkt.rs
prost-reflect/tests/: main.rs
prost-reflect/tests/data/: dependency_not_imported.yml  dependency_resolution_transitive.yml  dependency_resolution_transitive2.yml  dependency_resolution_transitive3.yml  enum_default1.yml  enum_default2.yml  enum_default3.yml  enum_duplicate_number1.yml  enum_duplicate_number2.yml  enum_duplicate_number3.yml  enum_field_invalid_default1.yml  enum_field_invalid_default2.yml  enum_field_invalid_default3.yml  enum_field_invalid_default4.yml  enum_field_invalid_default5.yml  enum_field_invalid_default6.yml  enum_field_invalid_default7.yml  enum_field_invalid_default8.yml  enum_field_invalid_default9.yml  enum_reserved_range_overlap_with_value1.yml  enum_reserved_range_overlap_with_value2.yml  enum_reserved_range_overlap_with_value3.yml  extend_field_number_not_in_extensions1.yml  extend_field_number_not_in_extensions2.yml  extend_group_field.yml  field_default_invalid_type1.yml  field_default_invalid_type2.yml  field_default_invalid_type3.yml  field_default_value1.yml  field_default_value2.yml  field_set_json_name.yml  generate_group_message_name_conflict.yml  generate_map_entry_message_name_conflict.yml  generate_synthetic_oneof_name_conflict.yml  invalid_message_number1.yml  invalid_message_number2.yml  invalid_service_type1.yml  invalid_service_type2.yml  invalid_service_type3.yml  message_field_duplicate_number1.yml  (+60 more)
prost-reflect/tests/snapshots/: main__dependency_not_imported.snap  main__dependency_resolution_transitive.snap  main__dependency_resolution_transitive2.snap  main__dependency_resolution_transitive3.snap  main__enum_default1.snap  main__enum_default2.snap  main__enum_default3.snap  main__enum_duplicate_number1.snap  main__enum_duplicate_number3.snap  main__enum_field_invalid_default2.snap  main__enum_field_invalid_default4.snap  main__enum_field_invalid_default5.snap  main__enum_field_invalid_default6.snap  main__enum_field_invalid_default7.snap  main__enum_field_invalid_default8.snap  main__enum_field_invalid_default9.snap  main__enum_reserved_range_overlap_with_value1.snap  main__enum_reserved_range_overlap_with_value2.snap  main__enum_reserved_range_overlap_with_value3.snap  main__extend_field_number_not_in_extensions2.snap  main__extend_group_field.snap  main__field_default_invalid_type1.snap  main__field_default_invalid_type2.snap  main__field_default_invalid_type3.snap  main__field_default_value1.snap  main__field_default_value2.snap  main__field_set_json_name.snap  main__generate_group_message_name_conflict.snap  main__generate_map_entry_message_name_conflict.snap  main__generate_synthetic_oneof_name_conflict.snap  main__invalid_message_number1.snap  main__invalid_message_number2.snap  main__invalid_service_type1.snap  main__invalid_service_type3.snap  main__message_field_duplicate_number1.snap  main__message_reserved_range_message_set1.snap  main__message_reserved_range_message_set2.snap  main__message_reserved_range_overlap_with_field1.snap  main__message_reserved_range_overlap_with_field2.snap  main__name_collision2.snap  (+45 more)
src/: lib.rs  unknown.rs
src/descriptor/: error.rs  mod.rs  service.rs
src/descriptor/ty/: build.rs  map.rs  mod.rs
src/dynamic/: message.rs  mod.rs
src/dynamic/serde/: de.rs  mod.rs  ser.rs
src/ty/: map.rs  mod.rs
tests/: Cargo.toml  build.rs
tests/proptest-regressions/: json.txt  lib.txt
tests/src/: arbitrary.rs  desc.proto  desc_no_package.proto  json.rs  lib.rs  test.proto
