[workspace]
resolver = "2"
members = [
    "prost-reflect",
    "prost-reflect-build",
    "prost-reflect-derive",
    "prost-reflect-tests",
    "prost-reflect-conformance-tests"
]

[workspace.metadata.release]
allow-branch = ["main"]
pre-release-commit-message = "(cargo-release) {{crate_name}} version {{version}}"

# [patch.crates-io]
# prost-reflect = { path = "prost-reflect" }
# prost = "0.12.0"
