[workspace]
resolver = "2"
members = [
    "prost-reflect",
    "prost-reflect-build",
    "prost-reflect-derive",
    "prost-reflect-tests",
    "prost-reflect-conformance-tests"
]

[workspace.metadata.release]
allow-branch = ["main"]
consolidate-commits = false

# [patch.crates-io]
# prost-reflect = { path = "prost-reflect" }
# prost = "0.12.0"
