[package]
name = "prost-reflect-build"
description = "An extension to prost-build to add descriptor information to messages"
keywords = ["protobuf", "serialization", "json"]
categories = ["encoding"]
version = "0.2.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/prost-reflect-build"
documentation = "https://docs.rs/prost-reflect-build"
license = "MIT OR Apache-2.0"
readme = "../README.md"
edition = "2018"
rust-version = "1.53.0"
