[package]
name = "prost-reflect-build"
description = "A utility function for use with prost-build and prost-reflect to generate ReflectMessage implementations"
keywords = ["protobuf", "serialization", "json"]
categories = ["encoding"]
version = "0.7.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/prost-reflect"
documentation = "https://docs.rs/prost-reflect-build"
license = "MIT OR Apache-2.0"
readme = "../README.md"
edition = "2018"
rust-version = "1.54.0"
exclude = ["test.proto"]

[dependencies]
prost-reflect = { path = "../prost-reflect", version = "0.8.0", features = [
    "derive"
] }
prost-build = "0.10.0"

[[package.metadata.release.pre-release-replacements]]
file = "src/lib.rs"
search = "html_root_url = \"https://docs.rs/prost-reflect-build/.*?/\""
replace = "html_root_url = \"https://docs.rs/prost-reflect-build/{{version}}/\""
exactly = 1

[package.metadata.release]
tag = false
