[package]
name = "prost-reflect-build"
description = "A utility function for use with prost-build and prost-reflect to generate ReflectMessage implementations"
keywords = ["protobuf", "serialization", "json"]
categories = ["encoding"]
version = "0.15.2"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/prost-reflect"
documentation = "https://docs.rs/prost-reflect-build"
license = "MIT OR Apache-2.0"
readme = "../README.md"
edition = "2021"
rust-version = "1.74.0"

[features]
default = []

[dependencies]
prost-reflect = { path = "../prost-reflect", version = "0.15.3", features = [
    "derive"
] }
prost-build = "0.14.0"
