[package]
name = "prost-reflect-conformance-tests"
description = "Protobuf test runner for prost-reflect."
version = "0.0.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false
build = "build.rs"

[[bin]]
name = "prost-reflect-conformance-tests"
test = false
doctest = false

[lib]
test = false
doctest = false

[dependencies]
prost = "0.12.0"
prost-types = "0.12.0"
prost-reflect = { path = "../prost-reflect", features = ["serde", "text-format"] }
env_logger = "0.11.2"
serde_json = { version = "1.0.114", features = ["float_roundtrip"] }
serde = "1.0.197"
once_cell = "1.9.0"

[dev-dependencies]

[build-dependencies]
tar = "0.4.38"
flate2 = "1.0.24"
ureq = "2.9.6"
anyhow = "1.0.81"
prost-build = "0.12.0"
tempfile = "3.10.1"

[package.metadata.release]
release = false
