[package]
name = "prost-reflect-conformance-tests"
description = "Protobuf test runner for prost-reflect."
version = "0.0.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false
build = "build.rs"

[[bin]]
name = "prost-reflect-conformance-tests"
test = false
doctest = false

[lib]
test = false
doctest = false

[dependencies]
prost = "0.12.6"
prost-types = "0.12.6"
prost-reflect = { path = "../prost-reflect", features = ["serde", "text-format"] }
env_logger = "0.11.3"
serde_json = { version = "1.0.117", features = ["float_roundtrip"] }
serde = "1.0.203"
once_cell = "1.9.0"

[dev-dependencies]

[build-dependencies]
tar = "0.4.38"
flate2 = "1.0.30"
ureq = "2.9.7"
anyhow = "1.0.86"
prost-build = "0.12.6"
tempfile = "3.10.1"

[package.metadata.release]
release = false
