[package]
name = "prost-reflect-derive"
description = "A derive macro for prost-reflect to generate ReflectMessage implementations"
keywords = ["protobuf", "serialization", "json"]
categories = ["encoding"]
version = "0.16.1"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/prost-reflect"
documentation = "https://docs.rs/prost-reflect-derive"
license = "MIT OR Apache-2.0"
readme = "../README.md"
edition = "2021"
rust-version = "1.82.0"
autotests = false

[lib]
proc-macro = true
doctest = false
test = false

[[test]]
name = "tests"
path = "tests/tests.rs"

[dependencies]
proc-macro2 = "1.0.36"
quote = "1.0.14"
syn = "2.0.32"

[dev-dependencies]
once_cell = "1.13.0"
prost = "0.14.0"
prost-reflect = { path = "../prost-reflect", features = ["derive"] }
trybuild = "1.0.84"
