[package]
name = "prost-reflect-tests"
description = "Tests for prost-reflect."
version = "0.0.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false
build = "build.rs"

[lib]
doctest = false

[[bench]]
name = "decode"
harness = false

[dependencies]
once_cell = "1.9.0"
prost = "0.12.4"
prost-reflect = { path = "../prost-reflect", features = [
    "serde",
    "derive",
    "text-format"
] }
prost-types = "0.12.4"

[dev-dependencies]
proptest = "1.0.0"
proptest-derive = "0.4.0"
serde_json = { version = "1.0.116", features = ["float_roundtrip"] }
serde = "1.0.199"
criterion = "0.5.1"
rayon = "1.10.0"

[build-dependencies]
prost-reflect-build = { path = "../prost-reflect-build" }
prost-build = "0.12.4"

[package.metadata.release]
release = false
