[package]
name = "prost-reflect"
description = "A protobuf library extending prost with reflection support and dynamic messages."
keywords = ["protobuf", "serialization", "json"]
categories = ["encoding"]
version = "0.5.7"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/prost-reflect"
documentation = "https://docs.rs/prost-reflect"
license = "MIT OR Apache-2.0"
readme = "../README.md"
edition = "2018"
rust-version = "1.53.0"
exclude = ["proptest-regressions", "src/file_descriptor_set.bin"]

[features]
derive = ["prost-reflect-derive"]
serde = ["serde1", "base64", "serde-value", "time"]
reflect-well-known-types = ["once_cell"]

[dependencies]
base64 = { version = "0.13.0", optional = true }
once_cell = { version = "1.9.0", optional = true }
prost = "0.9.0"
prost-reflect-derive = { path = '../prost-reflect-derive', version = "0.5.0", optional = true }
prost-types = "0.9.0"
serde-value = { version = "0.7.0", optional = true }
serde1 = { package = "serde", version = "1.0.132", optional = true }
time = { version = "0.3.5", features = [
    "formatting",
    "parsing"
], optional = true }

[dev-dependencies]
once_cell = "1.9.0"
proptest = "1.0.0"
prost-build = "0.9.0"
serde_json = "1.0.73"

[package.metadata.release]
tag-name = "{{version}}"
sign-tag = true

[[package.metadata.release.pre-release-replacements]]
file = "../README.md"
search = "https://deps.rs/crate/prost-reflect/.*?/status.svg"
replace = "https://deps.rs/crate/prost-reflect/{{version}}/status.svg"
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "src/lib.rs"
search = "html_root_url = \"https://docs.rs/prost-reflect/.*?/\""
replace = "html_root_url = \"https://docs.rs/prost-reflect/{{version}}/\""
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "../CHANGELOG.md"
search = "## \\[Unreleased\\]"
replace = "## [Unreleased]\n\n## [{{version}}] - {{date}}"
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "../CHANGELOG.md"
search = "\\[Unreleased\\]: https://github\\.com/andrewhickman/prost-reflect/compare/.*?...HEAD"
replace = "[Unreleased]: https://github.com/andrewhickman/prost-reflect/compare/{{version}}...HEAD\n[{{version}}]: https://github.com/andrewhickman/prost-reflect/compare/{{prev_version}}...{{version}}"
exactly = 1

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
