[package]
name = "prost-reflect"
description = "A protobuf library extending prost with reflection support and dynamic messages."
keywords = ["protobuf", "serialization", "json"]
categories = ["encoding"]
version = "0.16.1"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/prost-reflect"
documentation = "https://docs.rs/prost-reflect"
license = "MIT OR Apache-2.0"
readme = "../README.md"
edition = "2021"
rust-version = "1.74.0"
exclude = [
    "proptest-regressions",
    # don't include binary file descriptors into the published packages
    "**/*.bin",
    "**/*.proto",
    # no need to include the test data including snapshots
    "tests",
]

[[test]]
name = "main"
path = "tests/main.rs"
required-features = ["serde", "miette", "text-format"]

[features]
derive = ["dep:prost-reflect-derive"]
serde = ["dep:serde", "dep:base64", "dep:serde-value"]
text-format = ["dep:logos"]
miette = ["dep:miette"]

[dependencies]
base64 = { version = "0.22.0", optional = true }
logos = { version = "0.15.0", optional = true }
miette = { version = "7.0.0", optional = true }
prost = "0.14.0"
prost-reflect-derive = { path = '../prost-reflect-derive', version = "0.16.0", optional = true }
prost-types = "0.14.0"
serde-value = { version = "0.7.0", optional = true }
serde = { version = "1.0.132", optional = true }

[dev-dependencies]
insta = { version = "1.23.0", features = ["yaml"] }
once_cell = "1.13.0"
proptest = "1.0.0"
prost-build = "0.14.0"
prost-reflect-build = { path = "../prost-reflect-build" }
serde_json = "1.0.106"
serde_yaml = "0.9.25"
similar-asserts = { version = "1.4.2", features = ["serde"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
