[package]
name = "prost-dynamic-tests"
description = "Tests for prost-dynamic."
version = "0.0.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/prost-dynamic"
documentation = "https://docs.rs/prost-dynamic"
license = "MIT OR Apache-2.0"
edition = "2018"
publish = false
build = "build.rs"

[lib]
doctest = false

[dependencies]
prost-dynamic = { path = ".." }
once_cell = "1.9.0"
prost-types = "0.9.0"
prost = "0.9.0"

[build-dependencies]
prost-build = "0.9.0"
