[package]
name = "prost-dynamic-tests"
description = "Tests for prost-dynamic."
version = "0.0.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/prost-dynamic"
documentation = "https://docs.rs/prost-dynamic"
license = "MIT OR Apache-2.0"
edition = "2018"
publish = false
build = "build.rs"

[lib]
doctest = false

[dev-dependencies]
once_cell = "1.9.0"
proptest = "1.0.0"
proptest-derive = "0.3.0"
prost = "0.9.0"
prost-dynamic = { path = ".." }
prost-types = "0.9.0"

[build-dependencies]
prost-build = "0.9.0"
